[package]
name    = "plotter"
version = "0.0.1"

authors     = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
description = "Command line utility for stylish interactive charts"
homepage    = "https://github.com/termapps/plotter"
repository  = "https://github.com/termapps/plotter"

edition      = "2021"
rust-version = "1.67.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[dependencies]
clap = { version = "~4.1.8", features = ["derive", "wrap_help"] }

[[bin]]
name = "plotter"
path = "src/main.rs"

[profile.release]
lto = "thin"
